# ZLibWrap

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  LICENSE  README.md  SRCDEP.yaml  ZLibWrap.sln  fetch_deps  fetch_deps.bat
.github/workflows/: autobuild.yml  linux.yml  macos.yml  windows.yml  winxp.yml
ZLibWrap/: GZip.cpp  Unzip.cpp  ZLibWarp.cpp  ZLibWrap.def  ZLibWrap.h  ZLibWrap.rc  ZLibWrap.vcxproj  ZLibWrap.vcxproj.filters  Zip.cpp  dllmain.cpp
ZLibWrapLib/: Encoding.cpp  Unzip.cpp  ZLibWrapLib.cpp  ZLibWrapLib.h  ZLibWrapLib.vcxproj  ZLibWrapLib.vcxproj.filters  Zip.cpp
ZLibWrapTest/: Main.cpp  ZLibWrapTest.vcxproj
build_config/: BUILD.gn
contrib/minizip/: mztools.h
include/loki/: Allocator.h  CachedFactory.h  LockingPtr.h  SafeFormat.h  StrongPtr.h
include/zlibwrap/: zlibwrap.h  zlibwrapd.h
sample/: BUILD.gn  test.py  unzip.cc  unzip_win.cc  zip.cc  zip_win.cc
src/: BUILD.gn  encoding.h  encoding_win.cc  unzip.cc  unzip_posix.cc  unzip_win.cc  zip.cc  zip.h  zip_posix.cc  zip_win.cc  zlibwrap.h  zlibwrap.rc  zlibwrapd.cc
src/ZLibWrap/: BUILD.gn  ZLibWrap.cpp  ZLibWrap.h  ZLibWrap.rc  dllmain.cpp
src/ZLibWrapLib/: BUILD.gn  Encoding.cpp  Encoding.h  ZLibWrapLib.cpp  ZLibWrapLib.h  encoding.h  encoding_win.cc  system_util.h  system_util_win.cc  unzip.cc  unzip_win.cc  zip.cc  zip_win.cc  zlib_wrap.h
src/xlZip/: BUILD.gn  Main.cpp
test/: BUILD.gn  unzip.cc  zip.cc
xlZip/: xlZip.vcxproj  zlZip.vcxproj
