if (is_win) {
  console_app("zip") {
    testonly = true
    sources = [ "zip_win.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }

  console_app("unzip") {
    testonly = true
    sources = [ "unzip_win.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }

  console_app("zipa") {
    testonly = true
    sources = [ "zip.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }

  console_app("unzipa") {
    testonly = true
    sources = [ "unzip.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }
} else {
  executable("zip") {
    testonly = true
    sources = [ "zip.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }

  executable("unzip") {
    testonly = true
    sources = [ "unzip.cc" ]
    include_dirs = [ "../include" ]
    deps = [ "../src:zlibwrap" ]
  }
}
