executable("zip") {
  testonly = true
  if (is_win) {
    configs += [ "../build/config/win:console_subsystem" ]
  }
  sources = [ "zip.cc" ]
  include_dirs = [ "../include" ]
  deps = [ "../src:zlibwrap" ]
}

executable("unzip") {
  testonly = true
  if (is_win) {
    configs += [ "../build/config/win:console_subsystem" ]
  }
  sources = [ "unzip.cc" ]
  include_dirs = [ "../include" ]
  deps = [ "../src:zlibwrap" ]
}
