static_library("zlibwrap") {
  sources = [
    "../include/zlibwrap/zlibwrap.h",
    "unzip.cc",
    "zip.cc",
  ]
  if (is_win) {
    sources += [
      "encoding.h",
      "encoding_win.cc",
    ]
  }
  include_dirs = [
    "../thirdparty/loki/include",
    "../thirdparty/zlib/contrib",
    "../thirdparty/zlib",
    "../include",
  ]
  deps = [ "../thirdparty:minizip" ]
}

shared_library("zlibwrapd") {
  sources = [
    "../include/zlibwrap/zlibwrapd.h",
    "zlibwrapd.cc",
  ]
  if (is_win) {
    sources += [ "zlibwrap.rc" ]
  }
  include_dirs = [ "../include" ]
  defines = [ "ZLIBWRAP_EXPORTS" ]
  deps = [ ":zlibwrap" ]
}
