static_library("zlibwrap") {
  sources = [
    "../include/zlibwrap/zlibwrap.h",
    "zip.h",
  ]
  if (is_win) {
    sources += [
      "encoding.h",
      "encoding_win.cc",
      "unzip_win.cc",
      "zip_win.cc",
    ]
  } else {
    sources += [
      "unzip_posix.cc",
      "zip_posix.cc",
    ]
  }
  include_dirs = [ "../include" ]
  deps = [
    "../thirdparty:loki",
    "../thirdparty:minizip",
  ]
}

shared_library("zlibwrapd") {
  sources = [
    "../include/zlibwrap/zlibwrapd.h",
    "zlibwrapd.cc",
  ]
  if (is_win) {
    sources += [ "zlibwrap.rc" ]
  }
  include_dirs = [ "../include" ]
  defines = [ "ZLIBWRAP_EXPORTS" ]
  deps = [ ":zlibwrap" ]
}
