shared_library("ZLibWrap") {
  configs += [ "//build_config:project_common" ]
  if (is_win) {
    configs += [ "//build/config/win:static_runtime" ]
  }
  sources = [
    "//src/ZLibWrap/ZLibWrap.cpp",
    "//src/ZLibWrap/ZLibWrap.h",
  ]
  if (is_win) {
    sources += [ "//src/ZLibWrap/ZLibWrap.rc" ]
  }
  defines = [ "ZLIBWRAP_EXPORTS" ]
  deps = [ "//src/ZLibWrapLib" ]
}
