static_library("ZLibWrapLib") {
  configs += [ "//build_config:project_common" ]
  sources = [
    "//src/ZLibWrapLib/ZLibWrapLib.cpp",
    "//src/ZLibWrapLib/ZLibWrapLib.h",
    "//src/ZLibWrapLib/encoding.h",
    "//src/ZLibWrapLib/encoding_win.cc",
    "//src/ZLibWrapLib/system_util.h",
    "//src/ZLibWrapLib/system_util_win.cc",
  ]
  include_dirs = [
    "//thirdparty/zlib/contrib",
    "//thirdparty/zlib",
  ]
  deps = [ "//thirdparty:minizip" ]
}
